2026-02-19_egd_kafka/day2/lab0/workspace/kafka/examples/strimzi_kafka_bridge/ingress_openshift.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-bridge-openshift
  annotations:
    route.openshift.io/termination: "edge"
    route.openshift.io/insecureEdgeTerminationPolicy: "Redirect"
spec:
  ingressClassName: openshift-default
  rules:
    - host: my-bridge.apps.training.germanywestcentral.aroapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-bridge-bridge-service
                port:
                  number: 8080
